--- a/Page-1.css
+++ b/Page-1.css
@@ -372,11 +372,13 @@
   .u-section-1 .u-text-1 {
     margin-left: 13px;
     margin-right: 13px;
+    font-size: 3em;
   }
 
   .u-section-1 .u-text-2 {
     margin-left: 13px;
     margin-right: 13px;
+    font-size: 0.8em;
   }
 
   .u-section-1 .u-line-1 {
@@ -399,14 +401,13 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 3.75rem;
-    margin-top: 106px;
+    margin-top: 126px;
     margin-left: 9px;
     margin-right: 9px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.125rem;
+    font-size: 0.75rem;
     margin-left: 9px;
     margin-right: 9px;
   }
@@ -426,17 +427,27 @@
   .u-section-1 .u-text-1 {
     margin-left: 6px;
     margin-right: 6px;
+    margin-top: 26px;
+    font-size: 2em;
   }
 
   .u-section-1 .u-text-2 {
     margin-left: 6px;
     margin-right: 6px;
+    font-size: 0.6em;
   }
 
   .u-section-1 .u-line-1 {
     width: 51px;
+    margin-top: 10px;
   }
-} .u-section-2 {
+
+  .u-layout-last-row {
+    min-height: 400px;
+  }
+}
+
+.u-section-2 {
   background-image: none;
 }
 
