--- a/public/Page-1.css
+++ b/public/Page-1.css
@@ -155,7 +155,13 @@
     width: 105px;
     height: 105px;
   }
-} .u-section-7-2 {
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.5rem !important;
+  }
+}
+
+.u-section-7-2 {
   background-image: none;
 }
 
