Small UI/UX corrections in mobile version

--- a/public/Page-1.css
+++ b/public/Page-1.css
@@ -1708,7 +1708,7 @@
 
 @media (max-width: 1199px) {
   .u-block-9d4f-3 {
-    left: calc(((100% - 940px) / 2));
+    left: calc(((100% - 1000px) / 2));
     width: 33px;
     height: 33px;
   }
@@ -1722,7 +1722,7 @@
 
 @media (max-width: 991px) {
   .u-block-9d4f-3 {
-    left: calc(((100% - 720px) / 2));
+    left: 20px;
     width: 25px;
     height: 25px;
   }
@@ -1730,13 +1730,13 @@
   .u-block-9d4f-4 {
     width: 25px;
     height: 25px;
-    right: calc(((100% - 720px) / 2));
+    right: 20px;
   }
 }
 
 @media (max-width: 767px) {
   .u-block-9d4f-3 {
-    left: calc(((100% - 540px) / 2)  + -67px);
+    left: 15px;
     width: 24px;
     height: 24px;
   }
@@ -1744,13 +1744,13 @@
   .u-block-9d4f-4 {
     width: 24px;
     height: 24px;
-    right: calc(((100% - 540px) / 2)  + -67px);
+    right: 15px;
   }
 }
 
 @media (max-width: 575px) {
   .u-block-9d4f-3 {
-    left: calc(((100% - 340px) / 2)  + -113px);
+    left: 2px;
     width: 20px;
     height: 20px;
   }
@@ -1758,7 +1758,7 @@
   .u-block-9d4f-4 {
     width: 20px;
     height: 20px;
-    right: calc(((100% - 340px) / 2)  + -113px);
+    right: 2px;
   }
 }.u-section-8 .u-sheet-1 {
   min-height: 618px;
